--- a/cart.html
+++ b/cart.html
@@ -27,25 +27,18 @@
   </header>
 
   <div class="container">
-    <h1>Корзина </h1>
+    <h1>Корзина</h1>
 
     <div class="card">
-      <table>
-        <thead>
-          <tr>
-            <th>Заказ</th>
-            <th>Стоимость</th>
-            <th>Действие</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Соло Буст (Plat → Diamond)</td>
-            <td class="blood-text">1200 ₽</td>
-            <td><a href="#" style="color: grey;">Удалить</a></td>
-          </tr>
-        </tbody>
-      </table>
+      <h2>Ваш заказ</h2>
+
+      <div class="cart-item">
+        <div class="cart-item-info">
+          <span class="cart-item-name">Соло Буст (Plat → Diamond)</span>
+          <span class="cart-item-price blood-text">1200 ₽</span>
+        </div>
+        <button class="btn-delete">Удалить</button>
+      </div>
 
       <div style="margin-top: 40px;">
         <h2>Оформление заказа</h2>
